--- a/css/sale-product.css
+++ b/css/sale-product.css
@@ -13,9 +13,13 @@
 
 .product-cards {
   display: flex;
-  flex-wrap: wrap;
   gap: 24px;
   justify-content: center;
+}
+@media (max-width: 1239px) {
+  .product-cards {
+    flex-direction: column;
+  }
 }
 .product-card-display {
   flex-direction: row;
@@ -121,6 +125,10 @@
   line-height: 24px;
   letter-spacing: 0px;
   vertical-align: middle;
+}
+
+.product-features li img {
+  margin-right: 12.12px;
 }
 
 .buy-button {
